@@ -1,5 +1,6 @@
 2012-04-16  Kirit Saelensminde  <kirit@felspar.com>
  Finally implemented the decode portion of base 64 support.
+ Implemented a new logging DSL that makes it much simpler to create JSON objects in the log. Look at fost-base/Cpp/fost-core/log-tests.cpp for an example.
 
 2012-04-08  Kirit Saelensminde  <kirit@felspar.com>
  Fixed up a problem where the crypto++ library wasn't installing properly on Windows.
